# CloudSave2.0

./: CMakeLists.txt  README.md  a.out  initial.sql  install.py  makefile  run.py  run.sh  stop.py  stop.sh  test.cpp
FileServer/: config.json  database.json  file-info.cpp  file-info.h  file-server.cpp  file-server.h  file-server.sql  main.cpp  makefile  md5.cpp  md5.h
FileServer/source/: index.html  upload.html
GatewayServer/: business.cpp  business.h  config.json  gateway-server.cpp  gateway-server.h  json-data-parser.cpp  json-data-parser.h  makefile  server.cpp  session-server-client.cpp  session-server-client.h
ServerSDK/: acceptor.cpp  acceptor.h  buffer.cpp  buffer.h  channel.cpp  channel.h  connector.cpp  connector.h  epoll.cpp  epoll.h  event-loop.cpp  event-loop.h  eventloop-thread.cpp  eventloop-thread.h  eventloop-threadpool.cpp  function-callbacks.h  http-packet-parser.cpp  http-packet-parser.h  httplib.cpp  httplib.h  inet-address.cpp  inet-address.h  log.h  macros.h  mg_Mysql.cpp  mg_Mysql.h  mg_connection.cpp  mg_connection.h  mg_mysql.cpp  mg_pch.h  mg_socket.cpp  mg_socket.h  mysql-connection-pool.cpp  mysql-connection-pool.h  mysql.cpp  mysql.h  pch.h  singleton.h  socket.cpp  socket.h  (+17 more)
SessionServer/: business-task.cpp  business-task.h  database.json  file-info.cpp  file-info.h  makefile  protocal-type.h  server.cpp  session-json.h  session-server.cpp  session-server.h
Tools/: client.py  makeperf.py
loginServer/: CMakeLists.txt  loginConnection.cpp  loginConnection.h  loginServer.cpp  loginServer.h  loginServer.json  main.cpp  makefile
message/: IM.BaseDefine.proto  IM.Buddy.proto  IM.DataStruct.proto  IM.Login.proto  IM.Message.proto  IM.Other.proto  IM.Server.proto  generate.sh
messageServer/: CMakeLists.txt  clientConnection.cpp  clientConnection.h  loginServerClient.cpp  loginServerClient.h  main.cpp  makefile  messageServer.cpp  messageServer.h  messageServer.json  messageUser.cpp  messageUser.h  proxyServerClient.cpp  proxyServerClient.h
protocal/: imPduBase.cpp  imPduBase.h  protocal-base.h  protocal-session.h
proxyServer/: CMakeLists.txt  handlerMap.cpp  handlerMap.h  login.cpp  login.h  main.cpp  makefile  messageCache.cpp  messageCache.h  proxyServer.cpp  proxyServer.h  proxyServer.json  session.cpp  session.h  user.cpp  user.h
src/: CMakeLists.txt  acceptor.cpp  buffer.cpp  buffer.h  channel.cpp  common-server.cpp  common-server.h  connector.cpp  event-loop.cpp  event-loop.h  eventloop-thread.cpp  eventloop-thread.h  eventloop-threadpool.cpp  eventloop-threadpool.h  function-callbacks.h  http-method-call.cpp  http-method-call.h  http-packet-parser.cpp  http-packet-parser.h  json-extract.h  log.h  macros.h  makefile  mysql-connection-pool.cpp  mysql-connection-pool.h  rwlock.cpp  rwlock.h  singleton.h  tcp-client.cpp  tcp-connection.cpp  tcp-connection.h  tcp-packet-parser.cpp  timer-queue.cpp  timer-queue.h
src/base/: event-loop.cpp  event-loop.h  log.h  mysql-connection-pool.cpp  mysql.cpp  mysql.h  redis-connection-pool.cpp  redis-connection-pool.h  redis.cpp  redis.h  tcp-client.cpp  tcp-client.h  tcp-connection.cpp  tcp-connection.h  tcp-packet-parser.cpp  tcp-server.cpp  tcp-server.h  timer-queue.cpp  timer-queue.h
src/common/: common-macro.h  common.h
src/protocal/: CMakeLists.txt  imPduBase.cpp  imPduBase.h
src/protocol/: CMakeLists.txt  imPduBase.cpp
